--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    </head>
    <body>
      <div id="app">
-        <h1>This is a {{ dataOne }}</h1>
+        <h1>This is a {{ vueTest }}</h1>
      </div>
       
      
