--- a/index.html
+++ b/index.html
@@ -25,12 +25,28 @@
 
          <div class="navMenu">
             <ul>
-               <li>Home</li>
-               <li>TV Shows</li>
-               <li>Movies</li>
-               <li>New & Popular</li>
-               <li>My List</li>
-               <li>Browse by Languages</li>
+               <li>
+                  <p>Home</p>
+               </li>
+               
+               <li> 
+                  <p>TV Shows</p> 
+               </li>
+
+               <li> 
+                  <p>Movies</p> 
+               </li>
+
+               <li> 
+                  <p>New & Popular</p> 
+               </li>
+
+               <li> 
+                  <p>My List</p> 
+               </li>
+               <li> 
+                  <p>Browse by Languages</p> 
+               </li>
             </ul>
          </div>
 
