--- a/index.html
+++ b/index.html
@@ -51,8 +51,17 @@
             </ul>
          </div>
 
-         <div class ="navAvatar">
-            <img src="/images/netflix-avatar.png" alt="avatar">
+         <div class ="navSubMenu">
+            <div class="searchIcon">
+               <img src="/images/searchIconWhite.png" alt="searchIconWhite">
+            </div>
+            <div class="bellIcon">
+               <img src="/images/notificationBellWhite.png" alt="bellIconWhite">
+            </div>
+            <div class="avatar">
+               <img src="/images/netflix-avatar.png" alt="avatar">
+            </div>
+            
          </div>
 
 
