--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
 
       <div class="mainView">
          <div class="billboard">
-
+            <div class="billboardContents">
+               <h1 class="billboardTitle">Money Heist</h1>
+               <div class="billboardButtons">
+                 <button class="billboardButton">Play</button>
+                 <button class="billboardButton">My List</button>
+               </div>
+               <h1 class="billboardDescription">
+                 
+               </h1>
+             </div>
+             <div class="billboardFadeBottom"></div>
          </div>
 
          <div class="contentRow"></div>
