--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
              <div class="billboardFadeBottom"></div>
          </div>
 
-         <div class="contentRow"></div>
+         <div class="contentRow">
+            <h2>Watchlist</h2>
+            <div class="rowPosters">               
+               <div class="rowPosterLarge">
+                     <img src="/images/21-200x300.jpeg" alt="Prof. Ena Kulas Jr." />
+                     <p>Prof. Ena Kulas Jr.</p>
+               </div>
+            </div>
+         </div>
       </div>
 
       <div class="footer">
