--- a/index2.html
+++ b/index2.html
@@ -47,9 +47,10 @@
     <div class="row">
       <h2>Watchlist</h2>
       <div class="row__posters">
+        
         <div class="row__poster row__posterLarge">
             <img src="/images/21-200x300.jpeg" alt="Prof. Ena Kulas Jr." />
-            <p>Prof. Ena Kulas Jr.</p>
+            <p class="posterText">Prof. Ena Kulas Jr.</p>
         </div>
 
         <!-- <div class="row__poster row__posterLarge">
